--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,36 @@
-# Prerequisites
-*.d
+# Created by https://www.toptal.com/developers/gitignore/api/windows
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
 
-# Precompiled Headers
-*.gch
-*.pch
+#Codecool#
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+*.tmp
+temp/**
 
-# Fortran module files
-*.mod
-*.smod
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Dump file
+*.stackdump
 
-# Executables
-*.exe
-*.out
-*.app
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.toptal.com/developers/gitignore/api/windows
